--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,10 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4": {
+            "shellob9\\IgnoreMe\\": "src"
+        }
+    }
 }
