--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "shelob9/ignore-me",
+    "name": "shelob9/ignoreme",
     "description": "IGNORE ME!",
     "license": "GLPv2+",
     "authors": [
